<resources>
    <string name="app_name">TimeMet</string>
    <string name="open_drawerlayout">Drawer layout opened</string>
    <string name="close_drawerlayout">Drawer layout closed</string>
    <string name="menu_item_main">Главная</string>
    <string name="menu_item_pricelist">Цены</string>
    <string name="menu_item_stock">Акции</string>
    <string name="menu_item_sell_metall">Продать лом</string>
    <string name="menu_item_info">О нас</string>
    <string name="logo_descriptoin">Logo Тайммет</string>
    <string name="title_info">Info</string>
    <string name="sell">Продать</string>
    <string name="sell_title">Продажа</string>
    <string name="about_us">О нас</string>
    <string name="pricelist">Цены</string>
    <string name="stock">Акции</string>
    <string name="time_met">TimeMet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="metall_3a_name">Категория металла - 3А</string>
    <string name="metall_3a_desc">3А – исключительно стальной лом. Максимальные размеры 1,6х0,5х0,6 м. Масса куска должна находится в диапазоне от 1 до 600 кг...</string>
    <string name="metall_5a_name">Категория металла - 5А, 5Б</string>
    <string name="metall_5a_desc">5A - соответственно стальной и легированный лом. Негабаритные куски массой до 5 кг. Включает в себя стальной скрап...</string>
    <string name="metall_12A_name">Категория металла - 12А</string>
    <string name="metall_12A_desc">12А – бытовой и промышленный лом. Фасуется в пакеты массой не более 40 кг. Нет ограничения по габарита...</string>
    <string name="metall_16A_name">Категория металла - 16А</string>
    <string name="metall_16A_desc">16А – марка лома черных металлов, имеющая форму вьюнообразной стружки. Подразумевается последующая переплавка в печах. Нет ограничения по вес...</string>
    <string-array name="metalls">
        <item name="a_3">3А</item>
        <item name="a_5">5А</item>
        <item name="a_12">12А</item>
        <item name="a_16">16А</item>
    </string-array>
    <string-array name="regions">
        <item name="spb">Санкт-Петербург</item>
        <item name="len_oblast">Ленинградская обл.</item>
    </string-array>
    <string name="pattern_mettall_cost_per_ton">(%,d руб/т)</string>
    <string name="pattern_mettall_cost">(= %,d руб)</string>
    <string name="pattern_region_cost">(= %,d руб)</string>
    <string name="pattern_submerge_cost">(500руб/т = %,d руб)</string>
    <string name="pattern_result">Итог: %,d руб.</string>
    <string name="_7_812_389_23_92"><u>+7 (812) 389-23-92</u></string>
    <string name="http_timemet_ru"><u>http://timemet.ru</u></string>
    <string name="timemet_mail"><u>timemet@example.com</u></string>
    <string name="timemet_adress"><u>Санкт-Петербург, набережная Чёрной речки, дом 41</u></string>
    <string name="intro_step2_description">Приложение поможет вам быть вкурсе самых актуальных цен на рынке металлолома. В разделе \"Цены\" вы сможете ознакомиться с ними.</string>
    <string name="intro_step3_description">Вы сможете расчитать свою прибыль с помощью специального калькулятора. Для этого следует перейти к соответствующему разделу и указать данные для расчета.</string>
    <string name="intro_step4_description">Приложение поможет вам оформить заявку на продажу металла, в последствие чего вы сможете совершить выгодную сделку. Для этого необходимо перейти в раздел продаж и заполнить предложенную форму.</string>
    <string name="policy_0">Использование Сервисов приложения компании ООО ”Тайммет Вторчермет” означает безоговорочное согласие пользователя с настоящей Политикой и указанными в ней условиями обработки его персональной информации; в случае несогласия с этими условиями пользователь должен воздержаться от использования Сервисов.</string>
    <string name="policy_1">1. Персональная информация пользователей, которую получает и обрабатывает ООО ”Тайммет Вторчермет”</string>
    <string name="policy_1_1"><br>1.1. В рамках настоящей Политики под «персональной информацией пользователя» понимаются:</br>
        <br>1.1.1. Персональная информация, которую пользователь предоставляет о себе самостоятельно при заявке (заполнении формы заказа или вопроса) или в процессе использования Сервисов, включая персональные данные пользователя. Обязательная для предоставления Сервисов (оказания услуг) информация помечена специальным образом. Иная информация предоставляется пользователем на его усмотрение.</br>
        <br>1.1.2 Данные, которые автоматически передаются Сервисам ООО ”Тайммет Вторчермет” в процессе их использования с помощью установленного на устройстве пользователя программного обеспечения, в том числе IP-адрес, информация из cookie, информация о браузере пользователя (или иной программе, с помощью которой осуществляется доступ к Сервисам), время доступа, адрес запрашиваемой страницы.</br></string>
    <string name="policy_1_2">1.2. Настоящая Политика применима только к Сервисам ООО ”Тайммет Вторчермет”.ООО ”Тайммет Вторчермет” не контролирует и не несет ответственность за сайты третьих лиц, на которые пользователь может перейти по ссылкам, доступным на сайтах ООО ”Тайммет Вторчермет”, в том числе в результатах поиска. На таких сайтах у пользователя может собираться или запрашиваться иная персональная информация, а также могут совершаться иные действия.</string>
    <string name="policy_1_3">1.3. ООО ”Тайммет Вторчермет” в общем случае не проверяет достоверность персональной информации, предоставляемой пользователями, и не осуществляет контроль за их дееспособностью. Однако ООО ”Тайммет Вторчермет” исходит из того, что пользователь предоставляет достоверную и достаточную персональную информацию по вопросам, предлагаемым в форме заявки или вопроса, и поддерживает эту информацию в актуальном состоянии.</string>
    <string name="policy_2">2. Цели сбора и обработки персональной информации пользователей</string>
    <string name="policy_2_1">2.1. ООО ”Тайммет Вторчермет” собирает и хранит только те персональные данные, которые необходимы для предоставления Сервисов и оказания услуг (исполнения соглашений и договоров с пользователем). <br>2.2. Персональную информацию пользователя ООО ”Тайммет Вторчермет” может использовать в следующих целях:</br><br>2.2.1. Идентификация стороны в рамках соглашений и договоров с ООО ”Тайммет Вторчермет”;</br><br>2.2.2. Предоставление пользователю персонализированных Сервисов;</br><br>2.2.3. Связь с пользователем, в том числе направление уведомлений, запросов и информации, касающихся использования Сервисов, оказания услуг, а также обработка запросов и заявок от пользователя;</br><br>2.2.4. Улучшение качества Сервисов, удобства их использования, разработка новых Сервисов и услуг;</br><br>2.2.5. Таргетирование рекламных материалов;</br><br>2.2.6. Проведение статистических и иных исследований на основе обезличенных данных.</br></string>
    <string name="policy_3">3. Условия обработки персональной информации пользователя и её передачи третьим лицам</string>
    <string name="policy_3_1">3.1. ООО ”Тайммет Вторчермет” хранит персональную информацию пользователей в соответствии с внутренними регламентами конкретных сервисов.<br>3.2. В отношении персональной информации пользователя сохраняется ее конфиденциальность, кроме случаев добровольного предоставления пользователем информации о себе для общего доступа неограниченному кругу лиц.</br><br>3.3. ООО ”Тайммет Вторчермет” вправе передать персональную информацию пользователя третьим лицам в следующих случаях:</br><br>3.3.1. Пользователь выразил свое согласие на такие действия;</br><br>3.3.2. Передача необходима в рамках использования пользователем определенного Сервиса либо для оказания услуги пользователю;</br><br>3.3.3. Передача предусмотрена российским или иным применимым законодательством в рамках установленной законодательством процедуры;</br><br>3.3.4. Такая передача происходит в рамках продажи или иной передачи бизнеса (полностью или в части), при этом к приобретателю переходят все обязательства по соблюдению условий настоящей Политики применительно к полученной им персональной информации;</br><br>3.3.6. В целях обеспечения возможности защиты прав и законных интересов ООО ”Тайммет Вторчермет” или третьих лиц в случаях, когда пользователь нарушает Пользовательское соглашение сервисов ООО ”Тайммет Вторчермет”.</br><br>3.4. При обработке персональных данных пользователей ООО ”Тайммет Вторчермет” руководствуется Федеральным законом РФ «О персональных данных».</br></string>
    <string name="policy_4">4. Изменение пользователем персональной информации</string>
    <string name="policy_4_1">4.1. Пользователь может в любой момент изменить (обновить, дополнить) предоставленную им персональную информацию или её часть, а также параметры её конфиденциальности, отправив письмо на адрес: fr@timemet.ru <br>4.2. Пользователь также может удалить предоставленную им в рамках определенной учетной записи персональную информацию, отправив письмо на адрес: fr@timemet.ru При этом удаление данных может повлечь невозможность использования некоторых Сервисов ООО ”Тайммет Вторчермет”.</br></string>
    <string name="policy_5">5. Меры, применяемые для защиты персональной информации пользователей</string>
    <string name="policy_5_1">ООО ”Тайммет Вторчермет” принимает необходимые и достаточные организационные и технические меры для защиты персональной информации пользователя от неправомерного или случайного доступа, уничтожения, изменения, блокирования, копирования, распространения, а также от иных неправомерных действий с ней третьих лиц.</string>
    <string name="policy_6">6. Изменение Политики конфиденциальности. Применимое законодательство</string>
    <string name="policy_6_1">6.1. ООО ”Тайммет Вторчермет” имеет право вносить изменения в настоящую Политику конфиденциальности. При внесении изменений в актуальной редакции указывается дата последнего обновления. Новая редакция Политики вступает в силу с момента ее размещения, если иное не предусмотрено новой редакцией Политики. Действующая редакция всегда находится на странице по адресу: http://franchise.timemet.ru/ <br>6.2. К настоящей Политике и отношениям между пользователем и ООО ”Тайммет Вторчермет” , возникающим в связи с применением Политики конфиденциальности, подлежит применению право Российской Федерации.</br></string>
    <string name="policy_7">7. Обратная связь. Вопросы и предложения</string>
    <string name="policy_7_1">Все предложения или вопросы по поводу настоящей Политики следует сообщать по адресу: fr@timemet.ru</string>
</resources>