<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_menu_item_main"
        android:checkable="false"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_item_main"/>
    <item
        android:id="@+id/nav_menu_pricelist"
        android:checkable="false"
        android:checked="false"
        android:icon="@drawable/ic_monetization_on_black_24dp"
        android:title="@string/menu_item_pricelist" />
    <item
        android:id="@+id/nav_menu_item_sell_metall"
        android:checkable="false"
        android:icon="@drawable/ic_credit_card_black_24dp"
        android:title="@string/menu_item_sell_metall" />

    <item
        android:id="@+id/nav_menu_item_info"
        android:checkable="false"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/menu_item_info" />
    </group>


</menu>